<resources>
    <string name="app_name">Agenda</string>
    <string name="title_activity_main">Mon Agenda</string>
    <string name="event">Événements du jour</string>
    <string name="hint_title">Titre de l\'événement</string>
    <string name="date">Date</string>
    <string name="select_date">Sélectionner une date</string>
    <string name="select_time">Sélectionner une heure</string>
    <string name="start_time">Heure de début</string>
    <string name="end_time">Heure de fin</string>
    <string name="description">Description</string>
    <string name="save_event">Enregistrer l\'événement</string>
    <string name="no_event">Aucun Événement</string>
    <string name="deleted_event">Événement supprimé</string>
    <string name="empty_fields">Certains champs sont vides</string>
    <string name="added_event">Événement ajouté</string>
    <string name="updated_event">Événement modifié</string>
</resources>